@startuml System Core and Services - KU00298794

skinparam backgroundColor white
skinparam classBackgroundColor white
skinparam classBorderColor black
skinparam shadowing false
skinparam defaultFontSize 10
skinparam nodesep 60
skinparam ranksep 50

title System Core and Services - KU00298794

package "System Core" {
    class KU00298794_Library {
        -books: Map<String, KU00298794_Book>
        -users: Map<String, KU00298794_User>
        -librarians: Map<String, KU00298794_Librarian>
        -borrowingService: KU00298794_BorrowingService
        -reservationService: KU00298794_ReservationService
        -reportService: KU00298794_ReportService
        -notificationService: KU00298794_NotificationService
        -commandInvoker: KU00298794_CommandInvoker
        +KU00298794_Library()
        +addBook(book): void
        +removeBook(bookId): void
        +getBook(bookId): KU00298794_Book
        +getAllBooks(): List<KU00298794_Book>
        +searchBooks(query): List<KU00298794_Book>
        +addUser(user): void
        +removeUser(userId): void
        +getUser(userId): KU00298794_User
        +getAllUsers(): List<KU00298794_User>
        +addLibrarian(librarian): void
        +getLibrarian(librarianId): KU00298794_Librarian
        +getBorrowingService(): KU00298794_BorrowingService
        +getReservationService(): KU00298794_ReservationService
        +getReportService(): KU00298794_ReportService
        +getNotificationService(): KU00298794_NotificationService
        +getCommandInvoker(): KU00298794_CommandInvoker
    }

    class KU00298794_LibraryCLI <<UI>> {
        -library: KU00298794_Library
        -scanner: Scanner
        -running: boolean
        +KU00298794_LibraryCLI()
        +start(): void
        -displayWelcomeBanner(): void
        -displayMainMenu(): void
        -manageBooks(): void
        -addBook(): void
        -viewAllBooks(): void
        -searchBooks(): void
        -removeBook(): void
        -manageUsers(): void
        -registerUser(): void
        -viewAllUsers(): void
        -removeUser(): void
        -borrowBook(): void
        -returnBook(): void
        -reserveBook(): void
        -viewReports(): void
        -demonstrateDesignPatterns(): void
        -undoLastAction(): void
        -initializeSampleData(): void
        -getStringInput(prompt): String
        -getIntInput(prompt, min, max): int
        +{static} main(args): void
    }

    class KU00298794_Logger <<Singleton>> {
        -{static} instance: KU00298794_Logger
        -logs: List<String>
        -dateFormat: SimpleDateFormat
        -KU00298794_Logger()
        +{static} getInstance(): KU00298794_Logger
        +info(message): void
        +warning(message): void
        +error(message): void
        +debug(message): void
        -log(level, message): void
        +logBorrow(userId, bookId): void
        +logReturn(userId, bookId): void
        +logReservation(userId, bookId): void
        +logFine(userId, amount): void
        +logFinePayment(userId, amount): void
        +logUserRegistration(userId, membershipType): void
        +logBookAdded(bookId, title): void
        +logNotification(userId, notificationType): void
        +logOverdue(userId, bookId, daysOverdue): void
        +getAllLogs(): List<String>
        +getRecentLogs(count): List<String>
        +clearLogs(): void
        +getLogCount(): int
        +printAllLogs(): void
        +toString(): String
    }

    enum LogLevel {
        INFO
        WARNING
        ERROR
        DEBUG
    }
}

package "Service Layer" {
    class KU00298794_BorrowingService {
        -library: KU00298794_Library
        -notificationService: KU00298794_NotificationService
        -activeBorrowings: Map<String, KU00298794_BorrowRecord>
        +KU00298794_BorrowingService(library, notificationService)
        +borrowBook(user, book): boolean
        +returnBook(user, book): boolean
        +calculateDueDate(user, borrowDate): Date
        +calculateFine(record): double
        +checkOverdueBooks(): List<KU00298794_BorrowRecord>
        +getActiveBorrowings(): Map<String, KU00298794_BorrowRecord>
        -generateKey(user, book): String
    }

    class KU00298794_ReservationService {
        -library: KU00298794_Library
        -notificationService: KU00298794_NotificationService
        -reservations: Map<String, List<KU00298794_Reservation>>
        +KU00298794_ReservationService(library, notificationService)
        +reserveBook(user, book): boolean
        +cancelReservation(user, book): boolean
        +processReturnedBook(book): void
        +getNextReserver(book): KU00298794_User
        +getReservations(): Map<String, List<KU00298794_Reservation>>
    }

    class KU00298794_ReportService {
        -library: KU00298794_Library
        +KU00298794_ReportService(library)
        +generateMostBorrowedBooks(limit): List<KU00298794_Book>
        +generateActiveBorrowers(limit): List<KU00298794_User>
        +generateOverdueBooks(): List<KU00298794_BorrowRecord>
        +generateRevenueReport(): double
        +printMostBorrowedBooksReport(limit): void
        +printActiveBorrowersReport(limit): void
        +printOverdueBooksReport(): void
    }
}

' Relationships
KU00298794_Library --> KU00298794_BorrowingService
KU00298794_Library --> KU00298794_ReservationService
KU00298794_Library --> KU00298794_ReportService
KU00298794_LibraryCLI ..> KU00298794_Library
KU00298794_Logger +-- LogLevel
KU00298794_BorrowingService --> KU00298794_Library
KU00298794_ReservationService --> KU00298794_Library
KU00298794_ReportService --> KU00298794_Library

@enduml
